updated css px to rem and fixed images to not overlap button and details

--- a/client/src/screens/Singlelisting/Singlelisting.css
+++ b/client/src/screens/Singlelisting/Singlelisting.css
@@ -1,72 +1,82 @@
 .listing-container {
   display: flex;
   margin: 5% auto;
-  width: 1000px;
-  height: 600px;
-  box-shadow: 0px 0px 50px rgba(254, 12, 12, 0.5);
+  width: 62.5rem;
+  height: 37.5rem;
+  box-shadow: 0rem 0rem 3.125rem rgba(254, 12, 12, 0.5);
 }
 
 .listing-image {
   height: 100%;
   width: 50%;
+  /* background-color: #2f2c33; */
   background-color: black;
 }
 
 .listing-item-h2 {
-  padding-top: 20px;
-  padding-bottom: 60px;
+  padding-top: 5rem;
+  padding-bottom: 1rem;
 }
 
 .listing-item-h3 {
-  padding-top: 20px;
-  padding-bottom: 60px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .listing-item-p {
-  padding-top: 20px;
-  padding-bottom: 130px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center;
 }
 
 .listing {
   width: 50%;
   align-items: center;
-  padding-bottom: 80px;
+  padding-bottom: 1rem;
   font-size: x-large;
+  height: 37.5rem;
 }
 .listing-details {
-  height: 600px;
-  background: #2f2c33;
+  height: inherit;
+  background: black;
   color: white;
 }
 
 .listing-details-container {
-  padding: 35px 25px;
+  padding: 2.1875rem 1.5625rem;
+  height: 100%;
 }
 
-.item-container .item-image img {
-  height: 500px;
-  width: 100%;
+.item-container{
+  height: 100% !important;
+  /* height: 31.25rem !important; */
+  width: 100% !important;
 }
 
-.item-image {
+.single-listing-img {
+  height: 31.25rem;
+  max-width: 31.25rem;
+  border-radius: 20px !important;
+}
+
+.single-listing-item-image {
   position: absolute;
   z-index: 1;
 }
 
 .buy-btn {
   background: linear-gradient( 157.81deg, #def9fa -43.27%, #bef3f5 -21.24%, #9dedf0 12.19%, #7de7eb 29.82%, #5ce1e6 51.94%, #33bbcf 90.29% );
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0rem 0.0625rem 0.625rem rgba(0, 0, 0, 0.2);
   border: 0;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   width: 100%;
-  height: 40px;
-  margin-top: 50px;
+  height: 2.5rem;
+  margin-top: 5rem;
   color: black;
-  font-size: 10px;
+  font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
-  text-shadow: 0px 2px rgba(0, 0, 0, 0.2);
-  letter-spacing: 1.5px;
+  text-shadow: 0rem 0.125rem rgba(0, 0, 0, 0.2);
+  letter-spacing: 0.09375rem;
   cursor: pointer;
 }
